# snakes-demo

./: LICENSE  README.md  snakes.cabal  stack.yaml
app/: Main.hs
client/: Main.hs
server/: Main.hs
server/Snakes/: Server.hs
src/: Snakes.hs
src/Snakes/: Bot.hs  Config.hs  Control.hs  Model.hs  Render.hs
src/Snakes/Model/: Bonus.hs  Effect.hs  Food.hs  Item.hs  Snake.hs  Universe.hs
